# harness-fullstack-template

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: README.md
.claude/skills/project-analysis/: SKILL.md
.claude/skills/project-analysis/references/: mermaid-templates.md  mode-architecture.md  mode-dataflow.md  output-spec.md
.claude/skills/project-analysis/scripts/: scan_docs_metadata.py
.claude/skills/project-docs-workflow/: SKILL.md
docs/: OVERVIEW.md
docs/feature/: INDEX.md
docs/feature/template-health/: README.md
docs/reference/: INDEX.md  architecture.md  interfaces.md  runbook-testing.md
frontend/: AGENTS.md  next.config.ts  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts
src/api/: app.py  config.py
src/api/models/: __init__.py
src/api/routers/: health.py
src/api/services/: health.py
tests/: README.md
tests/test_api/: test_health_api.py
tests/test_services/: test_health_service.py
