[project]
name = "harness-fullstack-template"
version = "0.1.0"
description = "Docs-first fullstack harness template with typed FastAPI and Next.js boundaries"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-anyio>=0.0.0",
  "pytest-asyncio>=0.24,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = ["frontend", "node_modules", ".venv", "data", "reports"]
